Fix overlapping click triggers

--- a/style.css
+++ b/style.css
@@ -39,6 +39,13 @@ nav {
   color: #b0b0b0;
 }
 
+.no-select {
+  -webkit-user-select: none; /* Chrome/Safari */
+  -moz-user-select: none;    /* Firefox */
+  -ms-user-select: none;     /* IE10+ */
+  user-select: none;         /* Standard syntax */
+}
+
 #image-track {
   display: flex;
   gap: 4vmin;
@@ -73,10 +80,10 @@ nav {
 
 .blur-effect {
   filter: blur(5px);
-  transition: filter 0.6s ease;
+  transition: filter 1s ease;
 }
 
 .unblur {
   filter: blur(0px);
-  transition: filter 0.6s ease;
+  transition: filter 1s ease;
 }
